--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -259,6 +259,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: white;
   }
   
   .s-b-text a {
